--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "1. Grid 1. Canvas  1. Bumper Dots",
   "main": "index.js",
   "dependencies": {
+    "lodash": "^4.17.15",
     "watchify": "^3.11.1"
   },
   "devDependencies": {
