--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "watchify": "^3.11.1"
   },
   "devDependencies": {
+    "standard": "^14.3.4",
     "tap-spec": "^5.0.0",
     "tape": "^4.13.2"
   },
