--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "test": "npx tape ./test/**/*.js | npx tap-spec",
-    "watch": "npx watchify src/index.js -o bundle.js",
+    "watch": "npx watchify src/index.js -o bundle.js --debug --verbose",
     "start": "npm run watch"
   },
   "author": "",
